objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>PL_Business_Pillars__c</fullName>
        <formula>SBQQ__PrimaryQuote__r.PL_Business_Pillars__c</formula>
        <label>Product Groups</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PPL_Part_List_Name__c</fullName>
        <formula>IF(ISPICKVAL(PT_PPL_Type__c, &#39;CR&#39;) , &#39;CR-&#39;, &#39;PPL-&#39;) 
+ L2I_Program_Num__r.Name 
+ IF( PT_Is_PPL__c,IF(ISPICKVAL(PT_PPL_Type__c, &#39;CR&#39;),&quot;&quot;, &quot;-&quot;  + TEXT(PT_PPL_Type__c)),&quot;&quot;) 
+ 
IF(  
   ISPICKVAL(PT_PPL_Type__c, &#39;CR&#39;) , 
   IF ((NOT(ISNULL(PT_Parts_List_Revision_Number__c)) &amp;&amp; PT_Parts_List_Revision_Number__c &gt; 0),&#39;-&#39; + TEXT(PT_Parts_List_Revision_Number__c), &quot;&quot;) + IF (NOT(ISBLANK(PT_CR_Parts_List_Revision_Trans__c)),&#39;_&#39; + PT_CR_Parts_List_Revision_Trans__c, &quot;&quot;)
   , 
   IF (NOT(ISBLANK(PT_Revised_Parts_List_Version_Trans__c)),&#39;_&#39; + PT_Revised_Parts_List_Version_Trans__c, &quot;&quot;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PPL Part List Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PTI_Sales_Opp_Description__c</fullName>
        <formula>IF ( L2I_AC_Operator__r.L2I_Airline_Code__c == &quot;&quot; , &quot;Unavailable&quot;, L2I_AC_Operator__r.L2I_Airline_Code__c) &amp;
IF ( PL_Business_Pillars__c == &quot;&quot; , null, &quot; / &quot; &amp; PL_Business_Pillars__c) &amp;
IF ( TEXT( L2I_Fit_Type__c ) == &quot;&quot; , null, &quot; / &quot; &amp; TEXT( L2I_Fit_Type__c )) &amp;
IF ( L2I_Primary_System_Type__r.Name == &quot;&quot; , null, &quot; / &quot; &amp; L2I_Primary_System_Type__r.Name) &amp;
IF ( INCLUDES ( PT_Sub_System_Type__c , &quot;AUDIO/VIDEO&quot; ), &quot;-AUDIO/VIDEO&quot;,null ) &amp;
IF ( INCLUDES ( PT_Sub_System_Type__c , &quot;AVOD 1.0&quot; ), &quot;-AVOD 1.0&quot;,null ) &amp;
IF ( INCLUDES ( PT_Sub_System_Type__c , &quot;AVOD 1.5&quot; ), &quot;-AVOD 1.5&quot;,null ) &amp;
IF ( INCLUDES ( PT_Sub_System_Type__c , &quot;CMS&quot; ), &quot;-CMS&quot;,null ) &amp;
IF ( INCLUDES ( PT_Sub_System_Type__c , &quot;CSS&quot; ), &quot;-CSS&quot;,null ) &amp;
IF ( INCLUDES ( PT_Sub_System_Type__c , &quot;DAES&quot; ), &quot;-DAES&quot;,null ) &amp;
IF ( INCLUDES ( PT_Sub_System_Type__c , &quot;DIGITAL MPES&quot; ), &quot;-DIGITAL MPES&quot;,null ) &amp;
IF ( INCLUDES ( PT_Sub_System_Type__c , &quot;eFX&quot; ), &quot;-eFX&quot;,null ) &amp;
IF ( INCLUDES ( PT_Sub_System_Type__c , &quot;eX1&quot; ), &quot;-eX1&quot;,null ) &amp;
IF ( INCLUDES ( PT_Sub_System_Type__c , &quot;eX2&quot; ), &quot;-eX2&quot;,null ) &amp;
IF ( INCLUDES ( PT_Sub_System_Type__c , &quot;eX2 FOR B787&quot; ), &quot;-eX2 FOR B787&quot;,null ) &amp;
IF ( INCLUDES ( PT_Sub_System_Type__c , &quot;eX3&quot; ), &quot;-eX3&quot;,null ) &amp;
IF ( INCLUDES ( PT_Sub_System_Type__c , &quot;WIFI&quot; ), &quot;-WIFI&quot;,null ) &amp;
IF ( INCLUDES ( PT_Sub_System_Type__c , &quot;eXK&quot; ), &quot;-eXK&quot;,null ) &amp;
IF ( INCLUDES ( PT_Sub_System_Type__c , &quot;eXLite&quot; ), &quot;-eXLite&quot;,null ) &amp;
IF ( INCLUDES ( PT_Sub_System_Type__c , &quot;eXO&quot; ), &quot;-eXO&quot;,null ) &amp;
IF ( INCLUDES ( PT_Sub_System_Type__c , &quot;MOBILITY&quot; ), &quot;-MOBILITY&quot;,null ) &amp;
IF ( INCLUDES ( PT_Sub_System_Type__c , &quot;eXTV&quot; ), &quot;-eXTV&quot;,null ) &amp;
IF ( INCLUDES ( PT_Sub_System_Type__c , &quot;eXW&quot; ), &quot;-eXW&quot;,null ) &amp;
IF ( INCLUDES ( PT_Sub_System_Type__c , &quot;NEXT&quot; ), &quot;-NEXT&quot;,null ) &amp;
IF ( INCLUDES ( PT_Sub_System_Type__c , &quot;S3000&quot; ), &quot;-S3000&quot;,null ) &amp;
IF ( INCLUDES ( PT_Sub_System_Type__c , &quot;S3000i&quot; ), &quot;-S3000i&quot;,null ) &amp;
IF ( INCLUDES ( PT_Sub_System_Type__c , &quot;PRAM ONLY&quot; ), &quot;-PRAM ONLY&quot;,null ) &amp;
IF ( INCLUDES ( PT_Sub_System_Type__c , &quot;MPES&quot; ), &quot;-MPES&quot;,null ) &amp;
IF ( TEXT( L2I_AircraftQuantity__c ) == &quot;&quot;, null, &quot; / Qty &quot; &amp; TEXT( L2I_AircraftQuantity__c )) &amp;
IF ( L2I_Aircraft_Type__r.Name == &quot;&quot; , null, &quot; / &quot; &amp; L2I_Aircraft_Type__r.Name) &amp;
IF ( TEXT( SBQQ__PrimaryQuote__r.SBQQ__SubscriptionTerm__c ) == &quot;&quot;, null, &quot; / &quot; &amp; TEXT( SBQQ__PrimaryQuote__r.SBQQ__SubscriptionTerm__c ) &amp; &quot; Months&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PTI Sales Opp Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_Add_Install_Loc_and_Parts__c</fullName>
        <formula>IF (AND(OR(PT_Is_CPL__c ,  PT_Is_PPL__c ), TEXT(StageName) = &#39;Delivery&#39;),
				HYPERLINK(&quot;/apex/gblite__Grid?gname=Manage Parts&amp;fpf=PT_Install_Location__c.Part_List_Opportunity__c&amp;fpv=&quot; &amp; Id &amp; &quot;&amp;oppId=&quot; &amp; Id,  PT_Part_List_Name_Rev__c , &quot;_blank&quot;),
				&#39;&#39;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Manage Parts Grid</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_Approval_History_Type__c</fullName>
        <formula>IF (PT_Is_CPL__c == true, &#39;CPL Approval History&#39;, IF (PT_Is_PPL__c = true, &#39;PPL Approval History&#39;, &#39;&#39;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approval History Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_CPL_Document_Id__c</fullName>
        <label>Part List Document Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_CPL_Document_Name__c</fullName>
        <label>Part List Document Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_CPL_Document__c</fullName>
        <formula>HYPERLINK(&#39;/&#39; &amp; PT_CPL_Document_Id__c,  PT_CPL_Document_Name__c, &#39;_new&#39;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Part List Document</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_CPL_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CPL Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Program Part Lists</relationshipLabel>
        <relationshipName>PT_PPL_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PT_CPL_Stage__c</fullName>
        <formula>TEXT(PT_CPL_Opportunity__r.StageName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CPL Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_CR_Parts_List_Revision_Number__c</fullName>
        <description>W-003749 - Part list revision number only for CR PPL Type</description>
        <inlineHelpText>Parts List Revision Number starts with 1 and increments by 1, every time Part List is revised.
FOR CR PPL TYPE</inlineHelpText>
        <label>CR Parts List Revision Number</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PT_CR_Parts_List_Revision_Trans__c</fullName>
        <description>W-003749 - Translated value of PT_CR_Parts_List_Revision_Number__c</description>
        <label>CR Parts List Revision Trans</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_Current_Parts_List__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is updated whenever a CPL/PPL quote document is created. The value is that same quote Id used to the document generation.</description>
        <label>Current Parts List</label>
        <referenceTo>SBQQ__Quote__c</referenceTo>
        <relationshipLabel>Opportunities (Current Parts List)</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PT_FC_Budget__c</fullName>
        <label>FC Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PT_Is_CPL__c</fullName>
        <formula>AND( RecordType.DeveloperName = &#39;Sales&#39;,  TEXT(L2I_Product_Category__c) = &#39;IFEC&#39;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is CPL?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PT_Is_PPL__c</fullName>
        <formula>IF ( RecordType.DeveloperName = &#39;PPL&#39;, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is PPL?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PT_Manage_Parts_from_Program__c</fullName>
        <description>Note where a grid is called from. If called from a link that has a namespace (gbList) then don&#39;t add the namespace for the VF page.</description>
        <formula>IF (AND(OR(PT_Is_CPL__c , PT_Is_PPL__c ), TEXT(StageName) = &#39;Delivery&#39;),
HYPERLINK(&quot;/apex/Grid?gname=Manage Parts&amp;fpf=PT_Install_Location__c.Part_List_Opportunity__c&amp;fpv=&quot; &amp; Id &amp; &quot;&amp;oppId=&quot; &amp; Id, PT_Part_List_Name_Rev__c , &quot;_self&quot;),
&#39;&#39;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Manage Parts from Program</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_Opportunity_Link_Tabbed__c</fullName>
        <description>To link out of a GB Tabbed grid</description>
        <formula>IF (AND(OR(PT_Is_CPL__c , PT_Is_PPL__c ), TEXT(StageName) = &#39;Delivery&#39;),
HYPERLINK(&quot;/&quot; &amp; Id, PT_Part_List_Name_Rev__c , &quot;_top&quot;),
&#39;&#39;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Link Tabbed</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_Opportunity_Link__c</fullName>
        <formula>IF (
    AND(
        OR(PT_Is_CPL__c , PT_Is_PPL__c ),
        TEXT(StageName) = &#39;Delivery&#39;
    ),
    HYPERLINK(&quot;/&quot; &amp; Id, IF(PT_Is_PPL__c, PPL_Part_List_Name__c, PT_Part_List_Name_Rev__c) , &quot;_self&quot;),
    &#39;&#39;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Link to Opportunity record</inlineHelpText>
        <label>Manage Parts</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_PL_Approval_Approver_Comments__c</fullName>
        <label>PL Approval Approver Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PT_PL_Approval_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PL Approval Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PT_PL_Approval_Date__c</fullName>
        <label>PL Approval Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PT_PL_Approval_Status__c</fullName>
        <label>PL Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Recalled</fullName>
                </value>
                <value>
                    <fullName>PPM Pending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PT_PL_Approval_Submitted_Date__c</fullName>
        <label>PL Approval Submitted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PT_PL_Approval_Submitter_Comments__c</fullName>
        <label>PL Approval Submitter Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PT_PL_Approval_Submitter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Assigned during Part List Approval</description>
        <label>PL Approval Submitter</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PT_PL_Batch_In_Process__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PL Batch In Process</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PT_PL_Document_Generation_Status__c</fullName>
        <label>PL Document Generation Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PT_PL_Reverted_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PL Reverted By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PT_PL_Reverted_Date__c</fullName>
        <label>PL Reverted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PT_PPL_MROD_Schedule__c</fullName>
        <formula>IF (AND(PT_Is_PPL__c,TEXT(StageName) = &#39;Delivery&#39;),
IF(true,HYPERLINK(&quot;/&quot;+Id,&quot;MROD Schedule&quot;,&quot;_self&quot;)
,HYPERLINK(&quot;/apex/gblite__Grid?gname=MROD Schedule&amp;fpf=Part_List_Opportunity__c&amp;fpv=&quot; &amp; Id, &quot;PPL MROD Schedule&quot;, &quot;_self&quot;))
,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PPL MROD Schedule</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_PPL_Type_Link__c</fullName>
        <formula>IF (PT_Is_PPL__c,
HYPERLINK(&quot;/&quot; &amp; Id, TEXT(PT_PPL_Type__c) , &quot;_self&quot;),
&#39;&#39;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PPL Type Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_PPL_Type__c</fullName>
        <label>PPL Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PPL_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PT_Part_List_Document_Generated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Part List Document Generated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PT_Part_List_Grid_Editable__c</fullName>
        <description>Set Read-Only (&#39;1&#39;) for Manage Parts grid</description>
        <formula>IF ( TEXT(PT_PL_Approval_Status__c) = &#39;Pending&#39;, &#39;1&#39;, &#39;&#39;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Part List Grid Editable</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_Part_List_Name_Rev__c</fullName>
        <formula>PT_Part_List_Name__c &amp; &#39;_&#39; &amp;  PT_Revised_Parts_List_Version_Trans__c
+
IF( PT_Is_PPL__c ,  &quot; (&quot; + TEXT(PT_PPL_Type__c) + &quot;)&quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Part List Name Rev</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_Part_List_Name__c</fullName>
        <label>Part List Name</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PT_Part_List_Revisions__c</fullName>
        <formula>IF (AND(OR(PT_Is_CPL__c , PT_Is_PPL__c ), TEXT(StageName) = &#39;Delivery&#39;),
HYPERLINK(&quot;/apex/gblite__Grid?gname=Part List Revisions&amp;fpf=PT_Part_List_Opportunity__c&amp;fpv=&quot; &amp; Id &amp;
&quot;&amp;oppId=&quot; &amp; Id &amp; &quot;&amp;fpf3=PT_Pending_Approved__c&amp;fpv3=Approved&amp;fpf2=PT_Part_List_Revision_Number_Text__c&amp;fpv2=&quot; &amp; TEXT(PT_Parts_List_Revision_Number__c) , &quot;Part List Revisions&quot;, &quot;_blank&quot;),
&#39;&#39;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Part List Revisions</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_Parts_List_Pending_Approval__c</fullName>
        <description>Note where a grid is called from. If called from a link that has a namespace (gbList) then don&#39;t add the namespace for the VF page.</description>
        <formula>IF (ISPICKVAL(PT_PL_Approval_Status__c, &#39;Pending&#39;)
, PT_Opportunity_Link__c 
,&#39;&#39;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parts List Pending Approval</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_Parts_List_Revision_Number__c</fullName>
        <description>Parts List Revision Number starts with 1 and increments by 1 every time Part List is revised.</description>
        <inlineHelpText>Parts List Revision Number starts with 1 and increments by 1, every time Part List is revised.</inlineHelpText>
        <label>Parts List Revision Number</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PT_Pending_Part_List_Revisions__c</fullName>
        <formula>IF (AND(OR(PT_Is_CPL__c , PT_Is_PPL__c ), TEXT(PT_PL_Approval_Status__c) = &#39;Pending&#39;, TEXT(StageName) = &#39;Delivery&#39;),
HYPERLINK(&quot;/apex/gblite__Grid?gname=Part List Revisions&amp;fpf=PT_Part_List_Opportunity__c&amp;fpv=&quot; &amp; Id &amp;
&quot;&amp;oppId=&quot; &amp; Id &amp; &quot;&amp;fpf2=PT_Pending_Approved__c&amp;fpv2=Pending&quot; , &quot;Pending Part List Revisions&quot;, &quot;_blank&quot;),
&#39;&#39;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pending Part List Revisions</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_Pending_Parts_List__c</fullName>
        <label>Pending Parts List</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_Price_List__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Price List</label>
        <referenceTo>PT_PriceList__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PT_Principal_Prgrm_Mgr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Principal Program Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PT_Program_Mgr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Assigned during Part List Approval flow</description>
        <label>Program Mgr</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PT_Revised_Parts_List_Version_Trans__c</fullName>
        <label>Revised Parts List Version Trans</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PT_Sub_System_Type__c</fullName>
        <label>Sub System Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Sub_System_Type_Picklist_Values</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PT_Sub_System_Type_del_del__c</fullName>
        <label>Sub System Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Sub_System_Type_Picklist_Values</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PT_isProgramInMrodApproval__c</fullName>
        <formula>AND( Id =  L2I_Program_Num__r.Sales_Opportunity__c 
,OR( ISPICKVAL( L2I_Program_Num__r.Airbus_MROD_Approval_Status__c , &#39;Pending&#39;)
, ISPICKVAL( L2I_Program_Num__r.MROD_Approval_Status__c , &#39;Pending&#39;) )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>cross link lookup to use in setting up Grid for managing approvals</inlineHelpText>
        <label>isProgramInMrodApproval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent_Opportunity_Number__c</fullName>
        <formula>L2I_Parent_Opportunity__r.L2I_Opportunity_Number__c</formula>
        <label>Parent Opportunity Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pending_Delete_Effectivity__c</fullName>
        <label>Pending Delete Effectivity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pending_Effectivity__c</fullName>
        <label>Pending Effectivity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricebook_Name__c</fullName>
        <formula>Pricebook2.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Price Book Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrimaryQuote_Link__c</fullName>
        <formula>LEFT($Api.Partner_Server_URL_260, FIND( &#39;/services&#39;, $Api.Partner_Server_URL_260)) + SBQQ__PrimaryQuote__c</formula>
        <label>Primary Quote Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrimarySystemTypeName__c</fullName>
        <formula>L2I_Primary_System_Type__r.Name</formula>
        <label>Primary System Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proposed_CSFE__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Service Field Engineer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Proposed_Order_Administrator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Administrator</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Proposed_PAC_Airbus_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PAC Airbus Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Proposed_PMO_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PMO Group</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>PT_PMO_Groups__c.Group_Type__c</field>
                <operation>equals</operation>
                <value>Group</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>PT_PMO_Groups__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Proposed_PMO_SubGroup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PMO SubGroup</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>PT_PMO_Groups__c.Group_Type__c</field>
                <operation>equals</operation>
                <value>Sub Group</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>PT_PMO_Groups__c</referenceTo>
        <relationshipLabel>Opportunities (Proposed PMO SubGroup)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Proposed_Program_Administrator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program Administrator</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Proposed_Program_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reason_for_CRB_Request__c</fullName>
        <description>Reason for Commitment Review Board Request</description>
        <inlineHelpText>Required when the &#39;Commitment Review Board (CRB) Required&#39; field is checked</inlineHelpText>
        <label>Reason for CRB Request</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Contractual Evaluation</fullName>
                </value>
                <value>
                    <fullName>Engineering Evaluation</fullName>
                </value>
                <value>
                    <fullName>Financial Evaluation</fullName>
                </value>
                <value>
                    <fullName>New Market Entry Evaluation</fullName>
                </value>
                <value>
                    <fullName>Operations Evaluation</fullName>
                </value>
                <value>
                    <fullName>Product Evaluation</fullName>
                </value>
                <value>
                    <fullName>Strategic Deal Evaluation</fullName>
                </value>
                <value>
                    <fullName>VIP Program Evaluation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_for_Change_Request__c</fullName>
        <description>W-003749 - Used for CR PPL Process</description>
        <label>Reason for Change Request</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SGNA_Admin_Fee__c</fullName>
        <formula>If( isPickval(L2I_Product_Category__c, &#39;PTS&#39;),SBQQ__PrimaryQuote__r.PTS_SGNA_Admin_Fee_Adjustment__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SGNA Admin Fee</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Split_Version__c</fullName>
        <label>Split Version</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Variable_Risk_Contingency__c</fullName>
        <formula>If( isPickval(L2I_Product_Category__c, &#39;PTS&#39;),SBQQ__PrimaryQuote__r.Variable_Risk_Contingency__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Variable Risk Contingency</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>isNew_From_QuickAction__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that the Opportunity was created through a quick action button</description>
        <label>isNew_From_QuickAction</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>L2I_Opportunity_Number__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Procurement</value>
        </filters>
        <label>Opportunities In Procurement Stage</label>
    </listViews>
    <listViews>
        <fullName>All_Opportunities</fullName>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>L2I_Opportunity_Number__c</columns>
        <columns>L2I_Deal_Oppty_Desc_Url__c</columns>
        <columns>L2I_Sales_Opportunity_Description__c</columns>
        <columns>OPPORTUNITY.RECORDTYPE</columns>
        <columns>L2I_Product_Category__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>L2I_AC_Operator__c</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>L2I_Closed_Lost_Reasoning__c</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Sales</value>
        </filters>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>Awarded_Opportunities</fullName>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>L2I_Opportunity_Number__c</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Closed Won</value>
        </filters>
        <label>Awarded Opportunities</label>
    </listViews>
    <listViews>
        <fullName>Cathy_Opportunity</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>L2I_Record_Type__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Sales</value>
        </filters>
        <label>Cathy Opportunity</label>
    </listViews>
    <listViews>
        <fullName>Cathy_Test_View</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Sales</value>
        </filters>
        <label>Cathy Test View</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>L2I_Opportunity_Number__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>L2I_Record_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <filters>
            <field>L2I_Record_Type__c</field>
            <operation>notEqual</operation>
            <value>D</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>L2I_Opportunity_Number__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
</CustomObject>